<resources>
    <string name="app_name">上市风声</string>
    <string name="rv_manager_linearlayout">LinearLayoutManager</string>
    <string name="rv_manager_gridlayout">GridLayoutManager</string>
    <string name="search_hint_tip">请输入股票代码/简拼</string>
    <string name="search">搜索</string>
    <string name="drygoods">相关干货</string>
    <string name="shortcomment">短评</string>
    <string name="allcomment">查看全部短评</string>
    <string name="writecomment">写短评</string>
    <string name="weixin">微信一键登录</string>
    <string name="invitefriends">邀请好友获取现金红包,  秒提,  无门槛!</string>
    <string name="agreement">我已阅读并同意遵守</string>
    <string name="agreement2">服务许可协议    隐私政策</string>
    <string name="determine">确定</string>
    <string name="share">发布后分享到朋友圈</string>
    <string name="expand">展开</string>
    <string name="myaccount">我的账户</string>
    <string name="statementInfo">特别声明: 以上内容不构成投资意见！股市有风险，投资需谨慎！</string>
    <string name="loading">正在加载...</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

</resources>
