<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/shape_corner_12"
        android:fitsSystemWindows="true"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="12dp"
            android:src="@mipmap/smallsearch" />

        <EditText
            android:id="@+id/ed_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:hint="@string/search_hint_tip"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:textColor="@color/bacak"
            android:textSize="@dimen/pointDetailContent" />

        <View
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:background="@color/v_line" />

        <TextView
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_size_20"
            android:paddingRight="19dp"
            android:text="@string/search"
            android:textColor="@color/black_content"
            android:textSize="16dp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            zhy:layoutManager="@string/rv_manager_linearlayout" />

        <LinearLayout
            android:id="@+id/linear_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                zhy:layoutManager="@string/rv_manager_linearlayout" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>
