<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.cctv.ssfs.view.user.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:padding="@dimen/dp_10"
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="15dp"
            android:src="@mipmap/cancel" />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:src="@mipmap/login_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/white">

        <FrameLayout
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="29dp"
            android:layout_marginRight="29dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/selector_loginbtn_green">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="18dp"
                android:src="@mipmap/weixin" />

            <TextView
                android:id="@+id/tv_weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/weixin"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_19" />

            <TextView
                android:id="@+id/tv_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_loginbtn_click"
                android:visibility="gone" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="18dp"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/chenckBox"
                style="@style/CustomCheckboxTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingRight="4dp"
                android:paddingTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agreement"
                android:textColor="@color/black_summary_info"
                android:textSize="@dimen/text_size_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/agreement2"
                android:textColor="#c82b2b"
                android:textSize="@dimen/text_size_12" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
