<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/loading"
        android:textColor="@color/black_content"
        android:textSize="22dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp">


        <TextView
            android:id="@+id/tv_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="@color/black_summary_info"
            android:textSize="@dimen/text_size_12"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="@string/loading"
            android:textColor="@color/black_summary_info"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/tv_lableName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="@string/loading"
            android:textColor="@color/red4"
            android:textSize="@dimen/text_size_12" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_time"
            android:gravity="center_vertical"
            android:paddingRight="7dp"
            android:text="@string/loading"
            android:textColor="@color/black_content"
            android:textSize="@dimen/text_size_12" />

        <com.cctv.ratingbarlibrary.BaseRatingBar
            android:id="@+id/rb_starscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_source"
            android:layout_toRightOf="@+id/tv_code"
            app:srb_clickable="false"
            app:srb_drawableEmpty="@mipmap/starrating"
            app:srb_drawableFilled="@mipmap/starratingstatus"
            app:srb_isIndicator="false"
            app:srb_numStars="5"
            app:srb_rating="0.5"
            app:srb_scrollable="false"
            app:srb_starHeight="10dp"
            app:srb_starPadding="1dp"
            app:srb_starWidth="10dp"
            app:srb_stepSize="0.5" />

    </LinearLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow3"
        tools:ignore="WebViewLayout" />

    <TextView
        android:id="@+id/tv_statement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/statementInfo"
        android:textColor="@color/black_summary_info"
        android:textSize="@dimen/text_size_16" />

    <LinearLayout
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_tag_semicircle2"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已有" />

            <TextView
                android:id="@+id/tv_sharecount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="N人"
                android:textColor="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="参与分享此干货" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/dp_10" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="延伸阅读"
        android:textColor="@color/bacak"
        android:textSize="@dimen/text_size_18" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_web"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:overScrollMode="never"
        app:layoutManager="@string/rv_manager_linearlayout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="50dp"
        android:background="#bbb" />

    <View style="@style/h_line7" />

    <TextView
        android:id="@+id/tv_newcount"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="@dimen/dp_10"
        android:gravity="center_vertical"
        android:text="最新评论0条" />

</LinearLayout>